# burger-api

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  compose.override.yaml  compose.yaml  config.py  main.py  pleh.sh  pyproject.toml  shell.nix
.github/workflows/: release.yaml  tests.yaml  validation.yaml
api/: __init__.py  ping.py
api/auth/: __init__.py  login.py  logout.py  models.py  register.py  router.py  token.py  user.py
api/auth/user/: __init__.py  get.py
api/ingredients/: __init__.py  create.py  list.py  models.py  post.py
api/orders/: __init__.py  common.py  create.py  list.py  user_list.py
app/: app.py  config.py  db.py  di.py  security.py
app/api/: __init__.py  ping.py  router.py
app/api/auth/: __init__.py  login.py  models.py  register.py  user.py
app/api/ingredients/: list.py
app/api/orders/: __init__.py  common.py  create.py  list.py  user_list.py
app/db/: db.py  utils.py
app/db/tables/: ingredient.py  order.py  order_ingredient.py  user.py
app/repo/: base_repo.py  common.py  ingredients.py  orders.py  user.py
app/use_cases/: order_notifications.py
app/use_cases/order_notifications/: __init__.py  abc.py  inmemory.py  public.py  rabbitmq.py
assets/: ingredients.json
db/: __init__.py  db.py  ingredient.py  order.py  order_ingredient.py  user.py  utils.py
db/tables/: __init__.py  ingredient.py  order.py  order_ingredient.py  user.py
docs/: README.md  async_driver_perfomance.md  done  load.yaml  notifications_scheme.md  perfomance_improvments.md  todo  token_invalidation.md
docs/speedscope/: 2025-05-02_15-25-13_control.prof  2025-05-02_22-17-13_logs-and-async-dep.prof
infra/prometheus/: prometheus.yml
migrations/: env.py  script.py.mako
migrations/versions/: 2025_05_20_1145-d52f226db850_base_migration.py
scripts/: load_default_ingredients.py  plot_phout.py
stubs/snapshottest/: __init__.pyi  pytest.pyi
tests/: conftest.py
tests/api/auth/: test_flows.py  test_login.py  test_logout.py  test_refresh_token.py  test_register.py  test_user.py
tests/api/auth/snapshots/: snap_test_login.py  snap_test_user.py
tests/api/ingredients/: test_list.py
tests/api/ingredients/snapshots/: snap_test_list.py
tests/api/orders/: test_create.py  test_list.py
tests/api/orders/snapshots/: snap_test_create.py  snap_test_list.py
